[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/MySlider.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/OptionSwitcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/MyButton.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/blue_title_panel.tres" type="StyleBox" id=5]
[ext_resource path="res://src/ui/SettingsScreen.gd" type="Script" id=6]

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -103.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 25.0
margin_top = 6.0
margin_right = 1055.0
margin_bottom = 492.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1030.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Settings"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_top = 79.0
margin_right = 1030.0
margin_bottom = 417.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer"]
margin_right = 936.0
margin_bottom = 644.0
size_flags_vertical = 3
custom_constants/vseparation = 10
columns = 2

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_right = 432.0
margin_bottom = 51.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 436.0
margin_top = 9.0
margin_right = 936.0
margin_bottom = 51.0
rect_min_size = Vector2( 500, 0 )
size_flags_vertical = 12
max_value = 1.25
step = 0.05
value = 1.0
script = ExtResource( 1 )

[node name="SoundLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 61.0
margin_right = 432.0
margin_bottom = 112.0
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 436.0
margin_top = 70.0
margin_right = 936.0
margin_bottom = 112.0
rect_min_size = Vector2( 500, 0 )
size_flags_vertical = 12
max_value = 1.25
step = 0.05
value = 1.0
script = ExtResource( 1 )

[node name="TankEngineSoundsLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 129.0
margin_right = 432.0
margin_bottom = 180.0
text = "Tank engine sounds"

[node name="TankEngineSoundsOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 122.0
margin_right = 936.0
margin_bottom = 188.0

[node name="FullScreenLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 205.0
margin_right = 432.0
margin_bottom = 256.0
text = "Full screen"

[node name="FullScreenOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 198.0
margin_right = 936.0
margin_bottom = 264.0

[node name="ScreenshakeLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 281.0
margin_right = 432.0
margin_bottom = 332.0
size_flags_horizontal = 3
text = "Screen shake"

[node name="ScreenshakeOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 274.0
margin_right = 936.0
margin_bottom = 340.0

[node name="NetworkRelayLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 357.0
margin_right = 432.0
margin_bottom = 408.0
text = "Network relay"

[node name="NetworkRelayOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 350.0
margin_right = 936.0
margin_bottom = 416.0

[node name="DetailedLoggingLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 433.0
margin_right = 432.0
margin_bottom = 484.0
text = "Detailed logging"

[node name="DetailedLoggingOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 426.0
margin_right = 936.0
margin_bottom = 492.0

[node name="ControlSchemeLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 509.0
margin_right = 432.0
margin_bottom = 560.0
text = "Control scheme"

[node name="ControlScheme" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 502.0
margin_right = 936.0
margin_bottom = 568.0

[node name="GamepadDeviceLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 585.0
margin_right = 432.0
margin_bottom = 636.0
text = "Gamepad device"

[node name="GamepadDeviceOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 436.0
margin_top = 578.0
margin_right = 936.0
margin_bottom = 644.0

[node name="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer/GamepadDeviceOptions/VBoxContainer" index="1"]
margin_right = 446.0
align = 0
clip_text = true

[node name="ForwardButton" parent="Panel/VBoxContainer/ScrollContainer/GridContainer/GamepadDeviceOptions/VBoxContainer" index="2"]
margin_left = 450.0
margin_right = 500.0

[node name="DoneButton" type="Button" parent="Panel/VBoxContainer"]
margin_left = 440.0
margin_top = 421.0
margin_right = 590.0
margin_bottom = 486.534
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
text = "Done"
script = ExtResource( 4 )

[connection signal="value_changed" from="Panel/VBoxContainer/ScrollContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/ScrollContainer/GridContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/TankEngineSoundsOptions" to="." method="_on_TankEngineSoundsOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/FullScreenOptions" to="." method="_on_FullScreenOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/ScreenshakeOptions" to="." method="_on_ScreenshakeOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/NetworkRelayOptions" to="." method="_on_NetworkRelayOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/DetailedLoggingOptions" to="." method="_on_DetailedLoggingOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/ControlScheme" to="." method="_on_ControlScheme_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/GamepadDeviceOptions" to="." method="_on_GamepadDeviceOptions_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]

[editable path="Panel/VBoxContainer/ScrollContainer/GridContainer/GamepadDeviceOptions"]
